10. Made news section

--- a/app/index.html
+++ b/app/index.html
@@ -376,79 +376,85 @@
             </h2>
             <div class="forums__slider">
               <div class="forums__slide">
-                <img
-                  class="forums__slideimage"
-                  src="./images/main/forums/1.png"
-                  alt="forum"
-                />
-                <div class="forums__slidetextbox">
-                  <p class="forums__slidetext">Название форума</p>
-                  <p class="forums__slidedate">20.02.22</p>
-                </div>
-                <a class="forums__slidelink" href="#">
-                  Перейти
+                <a class="slider__link" href="#">
                   <img
-                    class="forums__slideicon"
-                    src="./images/main/services/arrow-right.svg"
-                    alt="arrow-right"
+                    class="forums__slideimage"
+                    src="./images/main/forums/1.png"
+                    alt="forum"
                   />
+                  <div class="forums__slidetextbox">
+                    <p class="forums__slidetext">Название форума</p>
+                    <p class="forums__slidedate">20.02.22</p>
+                  </div>
+                  <a class="forums__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="forums__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
                 </a>
               </div>
               <div class="forums__slide">
-                <img
-                  class="forums__slideimage"
-                  src="./images/main/forums/2.png"
-                  alt="forum"
-                />
-                <div class="forums__slidetextbox">
-                  <p class="forums__slidetext">Название форума</p>
-                  <p class="forums__slidedate">20.02.22</p>
-                </div>
-                <a class="forums__slidelink" href="#">
-                  Перейти
+                <a class="slider__link" href="#"
+                  ><img
+                    class="forums__slideimage"
+                    src="./images/main/forums/2.png"
+                    alt="forum" />
+                  <div class="forums__slidetextbox">
+                    <p class="forums__slidetext">Название форума</p>
+                    <p class="forums__slidedate">20.02.22</p>
+                  </div>
+                  <a class="forums__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="forums__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    /> </a
+                ></a>
+              </div>
+              <div class="forums__slide">
+                <a class="slider__link" href="#">
                   <img
-                    class="forums__slideicon"
-                    src="./images/main/services/arrow-right.svg"
-                    alt="arrow-right"
+                    class="forums__slideimage"
+                    src="./images/main/forums/3.png"
+                    alt="forum"
                   />
+                  <div class="forums__slidetextbox">
+                    <p class="forums__slidetext">Название форума</p>
+                    <p class="forums__slidedate">20.02.22</p>
+                  </div>
+                  <a class="forums__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="forums__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
                 </a>
               </div>
               <div class="forums__slide">
-                <img
-                  class="forums__slideimage"
-                  src="./images/main/forums/3.png"
-                  alt="forum"
-                />
-                <div class="forums__slidetextbox">
-                  <p class="forums__slidetext">Название форума</p>
-                  <p class="forums__slidedate">20.02.22</p>
-                </div>
-                <a class="forums__slidelink" href="#">
-                  Перейти
+                <a class="slider__link" href="#">
                   <img
-                    class="forums__slideicon"
-                    src="./images/main/services/arrow-right.svg"
-                    alt="arrow-right"
+                    class="forums__slideimage"
+                    src="./images/main/forums/3.png"
+                    alt="forum"
                   />
-                </a>
-              </div>
-              <div class="forums__slide">
-                <img
-                  class="forums__slideimage"
-                  src="./images/main/forums/3.png"
-                  alt="forum"
-                />
-                <div class="forums__slidetextbox">
-                  <p class="forums__slidetext">Название форума</p>
-                  <p class="forums__slidedate">20.02.22</p>
-                </div>
-                <a class="forums__slidelink" href="#">
-                  Перейти
-                  <img
-                    class="forums__slideicon"
-                    src="./images/main/services/arrow-right.svg"
-                    alt="arrow-right"
-                  />
+                  <div class="forums__slidetextbox">
+                    <p class="forums__slidetext">Название форума</p>
+                    <p class="forums__slidedate">20.02.22</p>
+                  </div>
+                  <a class="forums__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="forums__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
                 </a>
               </div>
             </div>
@@ -478,79 +484,85 @@
             </p>
             <div class="competitions__slider">
               <div class="competitions__slide">
-                <img
-                  class="competitions__slideimage"
-                  src="./images/main/competitions/1.png"
-                  alt="competition"
-                />
-                <div class="competitions__slidetextbox">
-                  <p class="competitions__slidetext">Название форума</p>
-                  <p class="competitions__slidedate">20.02.22</p>
-                </div>
-                <a class="competitions__slidelink" href="#">
-                  Перейти
+                <a class="slider__link" href="#">
                   <img
-                    class="competitions__slideicon"
-                    src="./images/main/services/arrow-right.svg"
-                    alt="arrow-right"
+                    class="competitions__slideimage"
+                    src="./images/main/competitions/1.png"
+                    alt="competition"
                   />
+                  <div class="competitions__slidetextbox">
+                    <p class="competitions__slidetext">Название форума</p>
+                    <p class="competitions__slidedate">20.02.22</p>
+                  </div>
+                  <a class="competitions__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="competitions__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
                 </a>
               </div>
               <div class="competitions__slide">
-                <img
-                  class="competitions__slideimage"
-                  src="./images/main/competitions/2.png"
-                  alt="competition"
-                />
-                <div class="competitions__slidetextbox">
-                  <p class="competitions__slidetext">Название форума</p>
-                  <p class="competitions__slidedate">20.02.22</p>
-                </div>
-                <a class="competitions__slidelink" href="#">
-                  Перейти
+                <a class="slider__link" href="#"
+                  ><img
+                    class="competitions__slideimage"
+                    src="./images/main/competitions/2.png"
+                    alt="competition" />
+                  <div class="competitions__slidetextbox">
+                    <p class="competitions__slidetext">Название форума</p>
+                    <p class="competitions__slidedate">20.02.22</p>
+                  </div>
+                  <a class="competitions__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="competitions__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    /> </a
+                ></a>
+              </div>
+              <div class="competitions__slide">
+                <a class="slider__link" href="#">
                   <img
-                    class="competitions__slideicon"
-                    src="./images/main/services/arrow-right.svg"
-                    alt="arrow-right"
+                    class="competitions__slideimage"
+                    src="./images/main/competitions/3.png"
+                    alt="competition"
                   />
+                  <div class="competitions__slidetextbox">
+                    <p class="competitions__slidetext">Название форума</p>
+                    <p class="competitions__slidedate">20.02.22</p>
+                  </div>
+                  <a class="competitions__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="competitions__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
                 </a>
               </div>
               <div class="competitions__slide">
-                <img
-                  class="competitions__slideimage"
-                  src="./images/main/competitions/3.png"
-                  alt="competition"
-                />
-                <div class="competitions__slidetextbox">
-                  <p class="competitions__slidetext">Название форума</p>
-                  <p class="competitions__slidedate">20.02.22</p>
-                </div>
-                <a class="competitions__slidelink" href="#">
-                  Перейти
+                <a class="slider__link" href="#">
                   <img
-                    class="competitions__slideicon"
-                    src="./images/main/services/arrow-right.svg"
-                    alt="arrow-right"
+                    class="competitions__slideimage"
+                    src="./images/main/competitions/2.png"
+                    alt="competition"
                   />
-                </a>
-              </div>
-              <div class="competitions__slide">
-                <img
-                  class="competitions__slideimage"
-                  src="./images/main/competitions/2.png"
-                  alt="competition"
-                />
-                <div class="competitions__slidetextbox">
-                  <p class="competitions__slidetext">Название форума</p>
-                  <p class="competitions__slidedate">20.02.22</p>
-                </div>
-                <a class="competitions__slidelink" href="#">
-                  Перейти
-                  <img
-                    class="competitions__slideicon"
-                    src="./images/main/services/arrow-right.svg"
-                    alt="arrow-right"
-                  />
+                  <div class="competitions__slidetextbox">
+                    <p class="competitions__slidetext">Название форума</p>
+                    <p class="competitions__slidedate">20.02.22</p>
+                  </div>
+                  <a class="competitions__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="competitions__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
                 </a>
               </div>
             </div>
@@ -797,29 +809,149 @@
         <div class="container">
           <div class="results__inner">
             <div class="results__box">
-              <img class="results__boxbg" src="./images/main/results/bg.svg" alt="backround">
+              <img
+                class="results__boxbg"
+                src="./images/main/results/bg.svg"
+                alt="backround"
+              />
               <h2 class="results__title">Наши результаты</h2>
-              <div class="results__item results__item--1"> 
+              <div class="results__item results__item--1">
                 <div class="results__rect"></div>
-                <p class="results__itemtext results__itemtext--1">В компании работает более <span>3 000</span> человек</p>
+                <p class="results__itemtext results__itemtext--1">
+                  В компании работает более <span>3 000</span> человек
+                </p>
               </div>
-              <div class="results__item results__item--2"> 
+              <div class="results__item results__item--2">
                 <div class="results__rect"></div>
-                <p class="results__itemtext results__itemtext--2"><span>849</span> компа ний</p>
+                <p class="results__itemtext results__itemtext--2">
+                  <span>849</span> компа ний
+                </p>
               </div>
-              <div class="results__item results__item--3"> 
+              <div class="results__item results__item--3">
                 <div class="results__rect"></div>
-                <p class="results__itemtext results__itemtext--3"><span>12</span> городов</p>
+                <p class="results__itemtext results__itemtext--3">
+                  <span>12</span> городов
+                </p>
               </div>
             </div>
             <!-- /results__box -->
-            <img class="results__img" src="./images/main/results/bro.png" alt="image">
+            <img
+              class="results__img"
+              src="./images/main/results/bro.png"
+              alt="image"
+            />
           </div>
           <!-- /results__inner -->
         </div>
         <!-- /container -->
       </section>
       <!-- /section.results -->
+
+      <section class="news">
+        <div class="container">
+          <div class="news__inner">
+            <h2 class="news__title">Новости</h2>
+            <div class="news__slider">
+              <div class="news__slide">
+                <a class="slider__link" href="#">
+                  <img
+                    class="news__slideimage"
+                    src="./images/main/news/1.png"
+                    alt="forum"
+                  />
+                  <div class="news__slidetextbox">
+                    <p class="news__slidetext">
+                      Иностранным гражданам будут выдавать новые формы патентов
+                    </p>
+                    <p class="news__slidedate">20.02.22</p>
+                  </div>
+                  <a class="news__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="news__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
+                </a>
+              </div>
+              <div class="news__slide">
+                <a class="slider__link" href="#">
+                  <img
+                    class="news__slideimage"
+                    src="./images/main/news/2.png"
+                    alt="forum" />
+                  <div class="news__slidetextbox">
+                    <p class="news__slidetext">Новый МРОТ с 1 января 2022 г</p>
+                    <p class="news__slidedate">20.02.22</p>
+                  </div>
+                  <a class="news__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="news__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    /> </a
+                ></a>
+              </div>
+              <div class="news__slide">
+                <a class="slider__link" href="#"
+                  ><img
+                    class="news__slideimage"
+                    src="./images/main/news/3.png"
+                    alt="forum" />
+                  <div class="news__slidetextbox">
+                    <p class="news__slidetext">
+                      Вакцинация иностранных граждан в Петербургре
+                    </p>
+                    <p class="news__slidedate">20.02.22</p>
+                  </div>
+                  <a class="news__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="news__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    /> </a
+                ></a>
+              </div>
+              <div class="news__slide">
+                <a class="slider__link" href="#">
+                  <img
+                    class="news__slideimage"
+                    src="./images/main/news/2.png"
+                    alt="forum"
+                  />
+                  <div class="news__slidetextbox">
+                    <p class="news__slidetext">Название форума</p>
+                    <p class="news__slidedate">20.02.22</p>
+                  </div>
+                  <a class="news__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="news__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
+                </a>
+              </div>
+            </div>
+            <!-- /news__slider -->
+            <div class="news__buttons">
+              <button class="news__button news__button--left">
+                <img src="./images/main/forums/left.svg" alt="left" />
+              </button>
+              <button class="news__button news__button--right">
+                <img src="./images/main/forums/right.svg" alt="right" />
+              </button>
+            </div>
+          </div>
+          <!-- /news__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.news -->
     </main>
 
     <script src="js/main.min.js"></script>
