--- a/app/index.html
+++ b/app/index.html
@@ -954,6 +954,77 @@
       <!-- /section.news -->
     </main>
 
+    <footer class="footer">
+      <a class="footer__maplink" href="#">
+        <img class="footer__map" src="./images/footer/map.png" alt="map">
+      </a>
+      <div class="container">
+        <div class="footer__top">
+          <div class="footer__box footer__box--1">
+            <div class="footer__logoBox">
+              <a class="footer__logo" href="#">
+                <img
+                  class="footer__logoimg"
+                  src="./images/header/logo.png"
+                  alt="logo"
+                />
+              </a>
+            </div>
+            <p class="footer__text footer__text--1">
+              © Все права защищены. <br />
+              ООО "Содействие" 2014-2021
+            </p>
+          </div>
+          <!-- /footer__box -->
+          <div class="footer__box footer__box--2">
+            <p class="footer__subtitle">Услуги</p>
+            <ul class="footer__list">
+              <li class="footer__listitem">
+                <a class="footer__link" href="#">Аутсорсинг персонала</a>
+              </li>
+              <li class="footer__listitem">
+                <a class="footer__link" href="#">Аутстаффинг персонала</a>
+              </li>
+              <li class="footer__listitem">
+                <a class="footer__link" href="#">Отзывы</a>
+              </li>
+            </ul>
+            <!-- /ul.footer__list -->
+          </div>
+          <!-- /footer__box -->
+          <div class="footer__box footer__box--3">
+            <p class="footer__subtitle">Контакты</p>
+            <p class="footer__address">Ул.Чапаева, д.25, Санкт-Петербург</p>
+            <a class="footer__link footer__link--1" href="tel:88124994534"
+              >8 (812) 499-45-34</a
+            >
+            <p class="footer__linktitle">Телефон в Москве:</p>
+            <a class="footer__link" href="84994994534">8 (499) 499-45-34</a>
+            <a class="footer__link footer__link--last" href="mailto:info@sodst.ru"
+              >e-mail: info@sodst.ru</a
+            >
+            <p class="footer__subtitle">Режим работы:</p>
+            <p class="footer__time">ПН - ПТ: 09:00 - 19:30</p>
+            <p class="footer__time">СБ - ВС: 12:00 - 16:00</p>
+          </div>
+          <!-- /footer__box -->
+        </div>
+        <!-- /footer__top -->
+      </div>
+      <!-- /container -->
+
+      <div class="footer__bottom">
+        <div class="container">
+          <p class="footer__bottomtext">ООО "Содействие"</p>
+          <p class="footer__bottomtext footer__bottomtext--last">ИНН 7813279922, ОГРН 1177847191609</p>
+          <a class="footer__bottomlink" href="#">Договор оферты</a>
+        </div>
+        <!-- /container -->
+      </div>
+      <!-- /footer__bottom -->
+    </footer>
+    <!-- /footer -->
+
     <script src="js/main.min.js"></script>
   </body>
 </html>
