13. Made responsive hero section

--- a/app/index.html
+++ b/app/index.html
@@ -124,6 +124,75 @@
     </header>
     <!-- /header.header -->
 
+    <main class="main">
+      <section class="hero">
+        <!-- <img class="hero__bgImage" src="./images/main/hero/hero-bg.png" alt="backround"> -->
+        <div class="container">
+          <div class="hero__inner">
+            <div class="hero__box">
+              <div class="hero__textbox">
+                <p class="hero__subtitle">
+                  Вывод персонала за штат 6 минут на сотрудника
+                </p>
+                <h1 class="hero__title">
+                  <span>Аутсорсинг и аутстаффинг</span> миграционных и кадровых
+                  услуг
+                </h1>
+                <p class="hero__text">
+                  Профессиональные кадровые и миграционные услуги для
+                  юридических лиц
+                </p>
+                <button class="hero__btn">Оставить заявку</button>
+              </div>
+              <!-- /hero__textbox -->
+              <div class="hero__imgbox">
+                <img
+                class="hero__img"
+                src="./images/main/hero/hero-img.png"
+                alt="person"
+              />
+              </div>
+            </div>
+            <!-- /hero__box -->
+            <ul class="hero__socials">
+              <li class="hero__socialsItem">
+                <a class="hero__socialsLink" href="#">
+                  <img
+                    class="hero__socialsIcon"
+                    src="./images/main/hero/vk.svg"
+                    alt="vk"
+                  />
+                </a>
+              </li>
+              <li class="hero__socialsItem">
+                <a class="hero__socialsLink" href="#">
+                  <img
+                    class="hero__socialsIcon"
+                    src="./images/main/hero/tg.svg"
+                    alt="telegram"
+                  />
+                </a>
+              </li>
+              <li class="hero__socialsItem">
+                <a class="hero__socialsLink" href="#">
+                  <img
+                    class="hero__socialsIcon"
+                    src="./images/main/hero/whatsapp.svg"
+                    alt="whatsapp"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- hero__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.hero -->
+    
+      
+    </main>
+
     <script src="js/main.min.js"></script>
   </body>
 </html>
