14. Made responsive services section

--- a/app/index.html
+++ b/app/index.html
@@ -147,10 +147,10 @@
               <!-- /hero__textbox -->
               <div class="hero__imgbox">
                 <img
-                class="hero__img"
-                src="./images/main/hero/hero-img.png"
-                alt="person"
-              />
+                  class="hero__img"
+                  src="./images/main/hero/hero-img.png"
+                  alt="person"
+                />
               </div>
             </div>
             <!-- /hero__box -->
@@ -189,8 +189,208 @@
         <!-- /container -->
       </section>
       <!-- /section.hero -->
-    
-      
+
+      <section class="services">
+        <div class="container">
+          <div class="services__inner">
+            <div class="services__textbox">
+              <h2 class="services__title">Услуги</h2>
+              <p class="services__subtitle">
+                Вы можете выбрать одну из услуг или воспользоваться всем
+                комплексом в зависимости от ваших задач
+              </p>
+            </div>
+            <!-- /services__textbox -->
+            <div class="services__items">
+              <div class="services__item services__item--1">
+                <img
+                  class="services__itemicon"
+                  src="./images/main/services/1.svg"
+                  alt="icon"
+                />
+                <h5 class="services__itemtitle">
+                  Аутсорсинг линейного персонала
+                </h5>
+                <p class="services__itemtext">
+                  Оперативный подбор кадров для: производств, складов, сферы
+                  HoReCa
+                </p>
+
+                <a class="services__itemlink" href="#">
+                  Подробнее
+                  <img
+                    class="services__linkicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow right"
+                  />
+                </a>
+              </div>
+
+              <div class="services__item services__item--2">
+                <img
+                  class="services__itemicon"
+                  src="./images/main/services/2.svg"
+                  alt="icon"
+                />
+                <h5 class="services__itemtitle">Аутсорсинг отдела кадров</h5>
+                <p class="services__itemtext">
+                  Полный цикл кадрового делопроизводства от оформления до
+                  выплаты зарплат
+                </p>
+                <a class="services__itemlink" href="#">
+                  Подробнее
+                  <img
+                    class="services__linkicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow right"
+                  />
+                </a>
+              </div>
+
+              <div class="services__item services__item--3">
+                <img
+                  class="services__itemicon"
+                  src="./images/main/services/3.svg"
+                  alt="icon"
+                />
+                <h5 class="services__itemtitle">Аутстаффинг/вывод за штат</h5>
+                <p class="services__itemtext">
+                  Решение для безопасной работы иностранного персонала на
+                  объектах
+                </p>
+                <a class="services__itemlink" href="#">
+                  Подробнее
+                  <img
+                    class="services__linkicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow right"
+                  />
+                </a>
+              </div>
+
+              <div class="services__item services__item--4">
+                <img
+                  class="services__itemicon"
+                  src="./images/main/services/4.svg"
+                  alt="icon"
+                />
+                <h5 class="services__itemtitle">
+                  Помощь в оформлении документов
+                </h5>
+                <p class="services__itemtext">
+                  Все, что нужно для легального пребывания и выполнения работ на
+                  территории РФ
+                </p>
+                <a class="services__itemlink" href="#">
+                  Подробнее
+                  <img
+                    class="services__linkicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow right"
+                  />
+                </a>
+              </div>
+
+              <div class="services__item services__item--5">
+                <img
+                  class="services__itemicon"
+                  src="./images/main/services/5.svg"
+                  alt="icon"
+                />
+                <h5 class="services__itemtitle">Общежитие СПб</h5>
+                <p class="services__itemtext">
+                  Проживание для рабочего персонала
+                </p>
+                <a class="services__itemlink" href="#">
+                  Подробнее
+                  <img
+                    class="services__linkicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow right"
+                  />
+                </a>
+              </div>
+
+              <div class="services__item services__item--6">
+                <img
+                  class="services__itemicon"
+                  src="./images/main/services/6.svg"
+                  alt="icon"
+                />
+                <h5 class="services__itemtitle">Мед. центр</h5>
+                <p class="services__itemtext">
+                  Мед. книжки, первичное и периодическое освидетельствование
+                </p>
+                <a class="services__itemlink" href="#">
+                  Подробнее
+                  <img
+                    class="services__linkicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow right"
+                  />
+                </a>
+              </div>
+
+              <div class="services__item services__item--7">
+                <img
+                  class="services__itemicon"
+                  src="./images/main/services/7.svg"
+                  alt="icon"
+                />
+                <h5 class="services__itemtitle">
+                  Юридическое сопровождение иностранного персонала
+                </h5>
+                <p class="services__itemtext">
+                  Консалтинг на узбекском, киргизском и таджикском языках,
+                  подача в суд, сопровождение, выезд юриста при задержании и т.
+                  д.
+                </p>
+                <a class="services__itemlink" href="#">
+                  Подробнее
+                  <img
+                    class="services__linkicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow right"
+                  />
+                </a>
+              </div>
+
+              <div class="services__item services__item--8">
+                <h5 class="services__itemtitle--8">Появились вопросы?</h5>
+                <p class="services__itemtext--8">
+                  Оставьте свои данные и мы вам перезвоним!
+                </p>
+                <form class="services__itemform">
+                  <label for="name">
+                    <input
+                      class="services__iteminput"
+                      id="name"
+                      type="text"
+                      placeholder="Ваше имя"
+                    />
+                  </label>
+                  <label for="phone">
+                    <input
+                      class="services__iteminput"
+                      id="phone"
+                      type="text"
+                      placeholder="Ваш телефон"
+                    />
+                  </label>
+                  <button class="services__itembtn">Связаться</button>
+                </form>
+              </div>
+            </div>
+            <!-- /services__items -->
+            <p class="services__text">
+              Аккредитация в Роструде Частного агентства Занятости
+            </p>
+          </div>
+          <!-- /services__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.services -->
     </main>
 
     <script src="js/main.min.js"></script>
