15. Made responsive forums section

--- a/app/index.html
+++ b/app/index.html
@@ -391,6 +391,112 @@
         <!-- /container -->
       </section>
       <!-- /section.services -->
+
+      <section class="forums">
+        <div class="container">
+          <div class="forums__inner">
+            <h2 class="forums__title">
+              Участвуем в крупных форумах и выставках
+            </h2>
+            <div class="forums__slider">
+              <div class="forums__slide">
+                <a class="slider__link" href="#">
+                  <img
+                    class="forums__slideimage"
+                    src="./images/main/forums/1.png"
+                    alt="forum"
+                  />
+                  <div class="forums__slidetextbox">
+                    <p class="forums__slidetext">Название форума</p>
+                    <p class="forums__slidedate">20.02.22</p>
+                  </div>
+                  <a class="forums__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="forums__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
+                </a>
+              </div>
+              <div class="forums__slide">
+                <a class="slider__link" href="#"
+                  ><img
+                    class="forums__slideimage"
+                    src="./images/main/forums/2.png"
+                    alt="forum" />
+                  <div class="forums__slidetextbox">
+                    <p class="forums__slidetext">Название форума</p>
+                    <p class="forums__slidedate">20.02.22</p>
+                  </div>
+                  <a class="forums__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="forums__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    /> </a
+                ></a>
+              </div>
+              <div class="forums__slide">
+                <a class="slider__link" href="#">
+                  <img
+                    class="forums__slideimage"
+                    src="./images/main/forums/3.png"
+                    alt="forum"
+                  />
+                  <div class="forums__slidetextbox">
+                    <p class="forums__slidetext">Название форума</p>
+                    <p class="forums__slidedate">20.02.22</p>
+                  </div>
+                  <a class="forums__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="forums__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
+                </a>
+              </div>
+              <div class="forums__slide">
+                <a class="slider__link" href="#">
+                  <img
+                    class="forums__slideimage"
+                    src="./images/main/forums/3.png"
+                    alt="forum"
+                  />
+                  <div class="forums__slidetextbox">
+                    <p class="forums__slidetext">Название форума</p>
+                    <p class="forums__slidedate">20.02.22</p>
+                  </div>
+                  <a class="forums__slidelink" href="#">
+                    Перейти
+                    <img
+                      class="forums__slideicon"
+                      src="./images/main/services/arrow-right.svg"
+                      alt="arrow-right"
+                    />
+                  </a>
+                </a>
+              </div>
+            </div>
+            <!-- /forums__slider -->
+            <div class="forums__buttons">
+              <button class="forums__button forums__button--left">
+                <img src="./images/main/forums/left.svg" alt="left" />
+              </button>
+              <button class="forums__button forums__button--right">
+                <img src="./images/main/forums/right.svg" alt="right" />
+              </button>
+            </div>
+          </div>
+          <!-- /forums__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.forums -->
     </main>
 
     <script src="js/main.min.js"></script>
